--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@ button, a.button {
   margin: 1vmin;
   padding: 1vmin;
   color: var(--white);
-  background-color: var(--orange);
+  background-color: rgb(77, 131, 238);
   font-size: 2vmin;
   font-weight: bold;
   text-decoration: none;
