--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -13,7 +13,7 @@ body {
 
 .Sidebar {
   height: 100%;
-  width: 20%;
+  width: 10em;
   color: black;
   background-color: white;
   display: flex;
@@ -23,6 +23,12 @@ body {
   padding: 20px;
 }
 
-.welcome {
-  width: 80%;
+.link {
+  text-decoration: none;
+  color: black;
+}
+
+.link:hover {
+  transform: scale(1.10);
+  color: rgb(77, 131, 238);
 }
