--- a/src/pages/MyProfilePage/MyProfilePage.css
+++ b/src/pages/MyProfilePage/MyProfilePage.css
@@ -1,3 +1,20 @@
 .Profile {
     width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profile-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 25px;
+    background-color: white;
+    margin: 70px;
+    width: 300px;
+}
+
+.profile-card:hover {
+    transform: scale(1.05);
 }
